--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -8,7 +8,7 @@
 
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" style="-fx-border-color: black; -fx-border-radius: 10;" text="Label" wrapText="true" HBox.hgrow="ALWAYS">
+        <Label fx:id="dialog" alignment="CENTER" minHeight="-Infinity" style="-fx-border-color: black; -fx-border-radius: 10;" text="Label" wrapText="true" HBox.hgrow="ALWAYS">
          <HBox.margin>
             <Insets />
          </HBox.margin>
