--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -7,15 +7,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.controller.MainWindow">
+<AnchorPane fx:id="mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0"
+            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.controller.MainWindow">
     <children>
-        <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="324.0" AnchorPane.bottomAnchor="1.0" />
-        <Button fx:id="sendButton" layoutX="324.0" layoutY="558.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" text="Send" />
-        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0">
-            <content>
-                <VBox fx:id="dialogContainer" prefHeight="552.0" prefWidth="388.0" />
-            </content>
+        <TextField fx:id="userInput" layoutX="14.0" layoutY="583.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="622.0" promptText="Your input:..." AnchorPane.bottomAnchor="175.66666666666663" />
+        <Button fx:id="sendButton" layoutX="643.0" layoutY="583.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="149.0" text="Send" />
+        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="800.0" vvalue="1.0">
+         <content>
+                <VBox fx:id="dialogContainer" prefHeight="555.0" prefWidth="800.0" />
+         </content>
         </ScrollPane>
+      <Button fx:id="closeProgramButton" layoutX="342.0" layoutY="679.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="116.0" text="Quit program" onAction="#closeProgram" />
     </children>
    <cursor>
       <Cursor fx:constant="HAND" />
