--- a/src/main/resources/styles/MainWindow.css
+++ b/src/main/resources/styles/MainWindow.css
@@ -18,3 +18,57 @@
 #dialogContainer .viewport {
   -fx-padding: 10px;
 }
+
+/* adapted from https://stackoverflow.com/questions/33494089/customize-controlsfx-notifications */
+.notification-bar>.pane {
+  -fx-background-color: red, yellow, blue;
+  -fx-padding: 5 5 5 5;
+  -fx-background-insets: 0, 1, 2;
+}
+
+.notification-bar>.pane .title {
+  -fx-font-size: 1.333em;
+  -fx-text-fill: #000000;
+  -fx-font-weight: bold;
+}
+
+.notification-bar>.pane .label {
+  -fx-font-size: 1em;
+  -fx-text-fill: #000000;
+  -fx-alignment: top-left;
+}
+
+.notification-bar>.pane .close-button {
+  -fx-background-color: transparent;
+  -fx-background-insets: 0;
+  -fx-background-radius: 0;
+  -fx-padding: 0 0 0 0;
+  -fx-alignment: center;
+}
+
+.notification-bar > .pane .close-button:hover {
+  -fx-background-color: linear-gradient(#a3a3a3, #8b8b8b 34%, #777777 36%, #777777 63%, #8b8b8b 65%, #adadad);
+}
+
+.notification-bar>.pane .close-button:pressed {
+  -fx-background-color: linear-gradient(#a3a3a3, #8b8b8b 34%, #777777 36%, #777777 63%, #8b8b8b 65%, #adadad);
+}
+
+.notification-bar>.pane .close-button>.graphic {
+  -fx-background-color: #fff;
+  -fx-scale-shape: false;
+  -fx-padding: 4.5 4.5 4.5 4.5;
+}
+
+.notification-bar>.pane .close-button:hover>.graphic {
+  -fx-background-color: #fff;
+}
+
+.notification-bar>.pane .close-button:pressed>.graphic {
+  -fx-background-color: #fff;
+}
+
+.notification-bar>.pane .close-button>.graphic {
+  -fx-shape:
+  "M395.992,296.758l1.794-1.794l7.292,7.292l-1.795,1.794 L395.992,296.758z M403.256,294.992l1.794,1.794l-7.292,7.292l-1.794-1.795 L403.256,294.992z";
+}
