--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pix.MainWindow">
     <children>
       <Pane layoutY="546.0" prefHeight="54.0" prefWidth="400.0" style="-fx-background-color: #525252;">
          <children>
-              <TextField fx:id="userInput" layoutX="14.0" layoutY="11.0" onAction="#handleUserInput" opacity="0.48" prefHeight="32.0" prefWidth="318.0" style="-fx-background-color: #808080; -fx-background-radius: 200;">
+              <TextField fx:id="userInput" layoutX="14.0" layoutY="11.0" onAction="#handleUserInput" opacity="0.48" prefHeight="32.0" prefWidth="318.0"  style="-fx-background-color: #808080; -fx-background-radius: 200; -fx-text-fill: e4d3d3;">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
