--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -9,15 +9,16 @@
 <?import javafx.scene.effect.DropShadow?>
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308"  maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" text="Label" wrapText="true" style="-fx-text-fill: #FFFFFF; -fx-background-color: indianred" minHeight = "10" textOverrun="CLIP" >
+        <Label fx:id="dialog" text="Label" wrapText="true" style="-fx-text-fill: #FFFFFF; -fx-background-color: indianred" textOverrun="CLIP" >
             <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                <Insets left="10.0" right="10.0" top="10.0" bottom="10.0"/>
             </padding>
+
         </Label>
         <Circle fx:id="clippedImage" radius="50" stroke="indianred" strokeType="INSIDE" >
-        <HBox.margin>
-            <Insets />
-        </HBox.margin>
+            <HBox.margin>
+                <Insets left="10.0" right="10.0"/>
+            </HBox.margin>
         </Circle>
 
     </children>
