--- a/src/main/resources/stylesheet/dialogBoxStyle.css
+++ b/src/main/resources/stylesheet/dialogBoxStyle.css
@@ -1,4 +1,4 @@
-.label {
+.bot-dialog, .user-dialog {
     -fx-background-color: #00afb9;
     -fx-background-radius: 8;
     -fx-font-size: 14px;
@@ -13,6 +13,12 @@
     -fx-background-color: #f07167;
 }
 
+.user {
+    -fx-font-weight: bold;
+    -fx-text-align: center;
+}
+
 .label:hover {
     -fx-effect: innershadow(gaussian ,rgba(0,0,0,0.5), 10,0,0,0);
 }
+
