--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -4,11 +4,20 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" stylesheets="/stylesheet/dialogBoxStyle.css" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" stylesheets="@../stylesheet/dialogBoxStyle.css" text="Label" wrapText="true" />
-        <ImageView fx:id="displayPicture" fitHeight="55.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true" />
+        <Label fx:id="dialog" stylesheets="@../stylesheet/dialogBoxStyle.css" text="Label" wrapText="true">
+         <HBox.margin>
+            <Insets left="5.0" right="5.0" />
+         </HBox.margin></Label>
+      <VBox fx:id="userid" prefHeight="0.0" prefWidth="55.0">
+         <children>
+              <ImageView fx:id="displayPicture" fitHeight="55.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="username" prefHeight="27.0" prefWidth="55.0" text="Label" textAlignment="CENTER" wrapText="true" />
+         </children>
+      </VBox>
     </children>
     <padding>
         <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
