--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" stylesheets="@../stylesheet/mainStyle.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chattime.MainWindow">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" stylesheets="@../stylesheet/mainStyle.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chattime.MainWindow">
     <children>
-        <TextField fx:id="userInput" layoutY="558.0" maxWidth="400.0" onAction="#handleUserInput" prefHeight="557.0" stylesheets="@../stylesheet/mainStyle.css" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="76.0" AnchorPane.topAnchor="557.6666666666666" />
-        <Button fx:id="sendButton" layoutX="324.0" layoutY="558.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" stylesheets="@../stylesheet/mainStyle.css" text="Send" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="557.6666666666666" textAlignment="CENTER">
+        <TextField fx:id="userInput" layoutY="558.0" maxHeight="41.0" maxWidth="400.0" prefHeight="41.0" onAction="#handleUserInput" stylesheets="@../stylesheet/mainStyle.css" AnchorPane.bottomAnchor="1.5" AnchorPane.leftAnchor="1.5" AnchorPane.rightAnchor="77.0"/>
+        <Button fx:id="sendButton" layoutX="324.0" layoutY="558.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" maxHeight="41.0" stylesheets="@../stylesheet/mainStyle.css" text="Send" textAlignment="CENTER" AnchorPane.bottomAnchor="1.5" AnchorPane.rightAnchor="1.5">
          <font>
             <Font name="Broadway" size="16.0" />
          </font></Button>
-        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" stylesheets="@../stylesheet/mainStyle.css" AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" vvalue="1.0">
+        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" vbarPolicy="ALWAYS" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" maxHeight="-Infinity" maxWidth="-Infinity" stylesheets="@../stylesheet/mainStyle.css" vvalue="1.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="42.0">
             <content>
-                <VBox fx:id="dialogContainer" prefHeight="557.0" prefWidth="388.0" stylesheets="@../stylesheet/mainStyle.css" AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" />
+                <VBox fx:id="dialogContainer" prefHeight="557.0" prefWidth="388.0" maxHeight="-Infinity" maxWidth="-Infinity" stylesheets="@../stylesheet/mainStyle.css" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"/>
             </content>
         </ScrollPane>
     </children>
