--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -4,19 +4,24 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-
 <?import javafx.scene.text.Font?>
-<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" maxHeight="1.7976931348623157E308" minHeight="-Infinity" style="-fx-padding: 10px; -fx-background-color: lightblue; -fx-background-radius: 14px;" text="Label" textFill="#073349" wrapText="true" HBox.hgrow="ALWAYS">
+
+        <Label fx:id="dialog" graphicTextGap="2.0" maxHeight="1.7976931348623157E308" minHeight="-Infinity" style="-fx-padding: 10px; -fx-background-color: lightblue; -fx-background-radius: 14px;" text="Label" textFill="#073349" textOverrun="CLIP" wrapText="true" HBox.hgrow="ALWAYS">
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
             <font>
-                <Font name="Arial" size="12.0" />
+                <Font name="Yu Gothic Medium" size="12.0" />
             </font>
             <HBox.margin>
-                <Insets left="5.0" right="5.0" />
+                <Insets left="10.0" right="10.0" />
             </HBox.margin>
         </Label>
-        <ImageView fx:id="displayPicture" fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="displayPicture" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" />
+
     </children>
     <padding>
         <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
