--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.MainWindow">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.gui.MainWindow">
   <children>
     <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="310.0" promptText="The Duke is listening..." style="-fx-background-radius: 10; -fx-background-insets: 5; -fx-min-height: 40; -fx-border-insets: 50; -fx-padding: 10;" AnchorPane.bottomAnchor="1.0">
          <font>
@@ -17,13 +17,13 @@
          <opaqueInsets>
             <Insets />
          </opaqueInsets></TextField>
-    <Button fx:id="sendButton" alignment="CENTER" contentDisplay="CENTER" layoutX="310.0" layoutY="562.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="33.0" prefWidth="86.0" style="-fx-background-radius: 15; -fx-background-color: #D61355;" text="Send" textAlignment="CENTER" textFill="WHITE">
+    <Button fx:id="sendButton" alignment="CENTER" contentDisplay="CENTER" layoutX="310.0" layoutY="562.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="33.0" prefWidth="86.0" style="-fx-background-radius: 15; -fx-background-color: #3D5A80;" text="Send" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Menlo Regular" size="13.0" />
          </font></Button>
     <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0">
       <content>
-        <VBox fx:id="dialogContainer" prefHeight="552.0" prefWidth="388.0" />
+        <VBox fx:id="dialogContainer" prefHeight="552.0" prefWidth="400.0" />
       </content>
     </ScrollPane>
   </children>
