--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -8,7 +8,7 @@
 
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.93" prefWidth="400.0" spacing="10.0" style="-fx-background-radius: 19; -fx-padding: 4;" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" minHeight="-Infinity" style="-fx-background-color: #82008F; -fx-text-fill: white; -fx-label-padding: 8; -fx-border-radius: 16; -fx-background-radius: 16;" text="Label" wrapText="true">
+        <Label fx:id="dialog" minHeight="-Infinity" style="-fx-background-color: #2E2D88; -fx-text-fill: white; -fx-label-padding: 8; -fx-border-radius: 16; -fx-background-radius: 16;" text="Label" wrapText="true">
             <font>
                 <Font name="Lucida Grande" size="12.0"/>
             </font>
