--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -16,7 +16,7 @@
         <Button fx:id="sendButton" layoutX="514.0" layoutY="558.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" text="Send" />
         <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" layoutX="-6.0" prefHeight="557.0" prefWidth="596.0" vvalue="1.0">
             <content>
-                <VBox fx:id="dialogContainer" prefHeight="552.0" prefWidth="596.0" />
+                <VBox fx:id="dialogContainer" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="552.0" prefWidth="596.0" />
             </content>
         </ScrollPane>
     </children>
