--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.controllers.MainWindow">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="700.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.controllers.MainWindow">
     <children>
-        <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="324.0" AnchorPane.bottomAnchor="1.0" />
-        <Button fx:id="sendButton" layoutX="324.0" layoutY="558.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" text="Send" />
-        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0">
+        <TextField fx:id="userInput" layoutY="662.0"
+                   onAction="#handleUserInput" prefHeight="41.0"
+                   prefWidth="500.0"
+                   AnchorPane.bottomAnchor="1.0"
+                   AnchorPane.leftAnchor="1.0"
+                   AnchorPane.rightAnchor="1.0"
+                   style="-fx-background-radius: 10;"
+        ><padding>
+            <Insets left="5.0" right="70.0" />
+        </padding></TextField>
+        <Button fx:id="sendButton" layoutX="395.0" layoutY="658.0"
+                mnemonicParsing="false" onAction="#handleUserInput"
+                prefHeight="41.0" prefWidth="105.0" text="Send"
+                AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                style="-fx-background-radius: 10;"/>
+        <ScrollPane fx:id="scrollPane"
+                    hbarPolicy="NEVER" fitToHeight="true" hvalue="4.0"
+                    prefHeight="656.0" prefWidth="500.0"
+                    vvalue="1.0"
+                    AnchorPane.topAnchor="0.0">
             <content>
-                <VBox fx:id="dialogContainer" prefHeight="552.0" prefWidth="388.0" />
+                <VBox fx:id="dialogContainer" prefHeight="660.0" prefWidth="500.0" />
             </content>
         </ScrollPane>
     </children>
