--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER_LEFT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="123.0" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <Label fx:id="dialog" alignment="CENTER" maxHeight="1.7976931348623157E308" minHeight="-Infinity" text="Label" wrapText="true">
+      <StackPane prefHeight="83.0" prefWidth="90.0">
          <padding>
-            <Insets bottom="10.0" left="19.0" right="10.0" top="10.0" />
-         </padding>
-         <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </HBox.margin></Label>
-    <ImageView fx:id="displayPicture" fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true" />
+         </padding>
+         <children>
+          <ImageView fx:id="displayPicture" fitHeight="60.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </StackPane>
+      <Text fx:id="dialog" boundsType="VISUAL" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="250.0" HBox.hgrow="ALWAYS">
+         <font>
+            <Font name="Menlo Regular" size="13.0" />
+         </font>
+      </Text>
   </children>
   <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
   </padding>
 </fx:root>
